<?xml version="1.0" encoding="utf-8"?>

<!-- 
    This file is part of BGsync.

    BGsync is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    BGsync is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with BGsync.  If not, see <http://www.gnu.org/licenses/>
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/logo"
    tools:context=".LogIn" >

    <EditText
        android:id="@+id/editText_contrasena"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/checkBox_recordar"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/editText_contrasena"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editText_usuario"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_above="@+id/editText_contrasena"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="40dp"
        android:ems="10"
        android:hint="@string/editText_usuario" />

    <CheckBox
        android:id="@+id/checkBox_recordar"
        android:layout_width="wrap_content"
        android:layout_centerVertical="true"
        android:layout_height="48dp"
        android:layout_alignLeft="@+id/editText_contrasena"
        android:text="@string/check_box_recordar" />

    <Button
        android:id="@+id/boton_entrar"
        android:layout_width="130dp"
        android:layout_height="48dp"
        android:layout_below="@+id/checkBox_recordar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/boton_entrar" />

</RelativeLayout>
